--- a/index.html
+++ b/index.html
@@ -5,46 +5,57 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-  <!-- Title -->
-  <title>Md. Samiul Ajom | Frontend & Shopify Developer | React.js & Next.js</title>
+  <!-- ✅ Title -->
+<title>Web Developer & Shopify Expert | React & Next.js Expert</title>
 
-  <!-- ✅ SEO Meta -->
-  <meta name="title" content="Md. Samiul Ajom | Frontend & Shopify Developer | React.js & Next.js" />
-  <meta name="description" content="Md. Samiul Ajom — Frontend & Shopify Developer skilled in React.js & Next.js. I build fast, responsive UI and custom Shopify eCommerce stores." />
-  <meta name="keywords" content="Frontend Developer, Shopify Developer, React.js Developer, Next.js Developer, Tailwind CSS, Bootstrap, JavaScript Developer, eCommerce Developer" />
-  <meta name="author" content="Md. Samiul Ajom" />
-  <meta name="robots" content="index, follow" />
+<!-- ✅ SEO Meta -->
+<meta name="title" content="Web Developer & Shopify Expert | React & Next.js Expert" />
+<meta name="description" content="Experienced Web Developer & Shopify Expert specializing in React & Next.js. I build responsive, high-performance websites and Shopify stores that boost sales." />
+<meta name="keywords" content="Web Developer, Shopify Developer, React.js Developer, Next.js Developer, Frontend Developer, Tailwind CSS, Bootstrap, JavaScript Developer, eCommerce Developer" />
+<meta name="author" content="Md. Samiul Ajom" />
+<meta name="robots" content="index, follow" />
 
-  <!-- ✅ Open Graph -->
-  <meta property="og:title" content="Md. Samiul Ajom | Frontend & Shopify Developer | React.js & Next.js" />
-  <meta property="og:description" content="Frontend & Shopify Developer skilled in React.js & Next.js. Building fast, responsive UI & Shopify stores." />
-  <meta property="og:url" content="https://samiulajom.github.io/samiul-showcase/" />
-  <meta property="og:type" content="website" />
-  <meta property="og:image" content="image/preview/portfolio-preview.jpg" />
+<!-- ✅ Open Graph / Facebook & LinkedIn Preview -->
+<meta property="og:title" content="Web Developer & Shopify Expert | React & Next.js Expert" />
+<meta property="og:description" content="Experienced Web & Shopify Developer specializing in React.js & Next.js. Building fast, responsive websites and Shopify stores." />
+<meta property="og:url" content="https://samiulajom.github.io/samiul-showcase/" />
+<meta property="og:type" content="website" />
+<meta property="og:image" content="https://samiulajom.github.io/samiul-showcase/image/preview/portfolio-preview.jpg" />
+<meta property="og:image:alt" content="Portfolio of Md. Samiul Ajom - Web & Shopify Developer" />
+<meta property="og:locale" content="en_US" />
 
-  <!-- ✅ Twitter -->
-  <meta name="twitter:card" content="summary_large_image" />
-  <meta name="twitter:title" content="Md. Samiul Ajom | Frontend & Shopify Developer" />
-  <meta name="twitter:description" content="React & Shopify Developer crafting fast UI & modern eCommerce stores." />
-  <meta name="twitter:image" content="image/banner/protfolio overview.png" />
+<!-- ✅ Twitter Card -->
+<meta name="twitter:card" content="summary_large_image" />
+<meta name="twitter:title" content="Md. Samiul Ajom | Web & Shopify Developer | React & Next.js" />
+<meta name="twitter:description" content="Experienced Web & Shopify Developer specializing in React & Next.js. Crafting fast, responsive UI & modern eCommerce stores." />
+<meta name="twitter:image" content="https://samiulajom.github.io/samiul-showcase/image/banner/portfolio-overview.png" />
+<meta name="twitter:image:alt" content="Portfolio of Md. Samiul Ajom - Web & Shopify Developer" />
+<meta name="twitter:site" content="@samiulajom" />
+<meta name="twitter:creator" content="@samiulajom" />
 
-  <!-- ✅ JSON-LD Schema -->
-  <script type="application/ld+json">
-  {
-    "@context": "https://schema.org/",
-    "@type": "Person",
-    "name": "Md. Samiul Ajom",
-    "jobTitle": "Frontend & Shopify Developer",
-    "url": "https://samiulajom.github.io/samiul-showcase/",
-    "image": "image/nav/pro3.png",
-    "worksFor": { "@type": "Organization", "name": "Betopia Group" },
-    "sameAs": [
-      "https://github.com/samiulajom",
-      "https://www.linkedin.com/in/samiul-ajom/"
-    ],
-    "skills": ["React", "Next.js", "Shopify", "Tailwind CSS", "JavaScript", "Bootstrap", "GSAP", "Figma"]
-  }
-  </script>
+<!-- ✅ JSON-LD Schema -->
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org/",
+  "@type": "Person",
+  "name": "Md. Samiul Ajom",
+  "jobTitle": "Web & Shopify Developer",
+  "url": "https://samiulajom.github.io/samiul-showcase/",
+  "image": "https://samiulajom.github.io/samiul-showcase/image/nav/pro3.png",
+  "worksFor": {
+    "@type": "Organization",
+    "name": "Betopia Group"
+  },
+  "sameAs": [
+    "https://github.com/samiulajom",
+    "https://www.linkedin.com/in/samiul-ajom/",
+    "https://www.facebook.com/mdsamiulajomm",
+    "https://x.com/samiulajom"
+  ],
+  "skills": ["React", "Next.js", "Shopify", "Tailwind CSS", "JavaScript", "Bootstrap", "GSAP", "Figma"]
+}
+</script>
+
 
    <!--===========================✅ SEO CODE END ✅====================================== -->
    
@@ -1103,8 +1114,8 @@
                             <img src="./image/testimonial/2.jpg" alt="Samiul Ajom" />
                           </div>
                           <div class="info">
-                            <h3>Jhon Doe</h3>
-                            <span>Content Manager</span>
+                            <h3>Bishopwking</h3>
+                            <span>Businessman</span>
                           </div>
                         </div>
                       </div>
@@ -1113,31 +1124,7 @@
                       <div class="list_inner">
                         <div class="text">
                           <p>
-                            The first time I got an issue sorted within seconds.
-                            The author responded to my email within minutes. I
-                            am happy to recommend anyone not only this wonderful
-                            theme but also the author.
-                          </p>
-                        </div>
-                        <div class="details">
-                          <div class="image">
-                            <img src="./image/testimonial/1.jpg" alt="Samiul Ajom" />
-                          </div>
-                          <div class="info">
-                            <h3>Armin Bhaan vuiran</h3>
-                            <span>Content Manager</span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="swiper-slide">
-                      <div class="list_inner">
-                        <div class="text">
-                          <p>
-                            The first time I got an issue sorted within seconds.
-                            The author responded to my email within minutes. I
-                            am happy to recommend anyone not only this wonderful
-                            theme but also the author.
+                         Samiul is the lead of the team who interacts with the customer, and his team of developers and project managers does the design work. Once I understood this dynamic, the project progressed smoothly. Samiul and his team are polite, engaged, and strive to do the best job. They arrange Zoom calls before at the start and at each stage to make sure they understand and you have the opportunity to explain, use these calls as it helps the process all round. I have worked on several website builds, and for the price paid to the team, this was exceptional value. We are left with a website we are proud to take to market. Highly recommend.
                           </p>
                         </div>
                         <div class="details">
@@ -1145,7 +1132,7 @@
                             <img src="./image/testimonial/3.jpg" alt="Samiul Ajom" />
                           </div>
                           <div class="info">
-                            <h3>Abrar Chowdury</h3>
+                            <h3>Andrew Murphy</h3>
                             <span>Production Manager</span>
                           </div>
                         </div>
@@ -1155,31 +1142,8 @@
                       <div class="list_inner">
                         <div class="text">
                           <p>
-                            The first time I got an issue sorted within seconds.
-                            The author responded to my email within minutes. I
-                            am happy to recommend anyone not only this wonderful
-                            theme but also the author.
-                          </p>
-                        </div>
-                        <div class="details">
-                          <div class="image">
-                            <img src="./image/testimonial/2.jpg" alt="Samiul Ajom" />
-                          </div>
-                          <div class="info">
-                            <h3>Jhon Doe</h3>
-                            <span>Content Manager</span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="swiper-slide">
-                      <div class="list_inner">
-                        <div class="text">
-                          <p>
-                            The first time I got an issue sorted within seconds.
-                            The author responded to my email within minutes. I
-                            am happy to recommend anyone not only this wonderful
-                            theme but also the author.
+                            
+                            Exceptional work ethic and professionalism. He is easy to work with and delivered on time. Will definitely come back. Thank you so much..
                           </p>
                         </div>
                         <div class="details">
@@ -1187,7 +1151,7 @@
                             <img src="./image/testimonial/1.jpg" alt="Samiul Ajom" />
                           </div>
                           <div class="info">
-                            <h3>Armin Bhaan vuiran</h3>
+                            <h3>marieclaire</h3>
                             <span>Content Manager</span>
                           </div>
                         </div>
@@ -1197,10 +1161,7 @@
                       <div class="list_inner">
                         <div class="text">
                           <p>
-                            The first time I got an issue sorted within seconds.
-                            The author responded to my email within minutes. I
-                            am happy to recommend anyone not only this wonderful
-                            theme but also the author.
+                         This really was a pleasurable experience. The eye for detail and the quick response time was exceptional.
                           </p>
                         </div>
                         <div class="details">
@@ -1208,138 +1169,13 @@
                             <img src="./image/testimonial/3.jpg" alt="Samiul Ajom" />
                           </div>
                           <div class="info">
-                            <h3>Abrar Chowdury</h3>
-                            <span>Production Manager</span>
+                            <h3>Mr Marcus Robin33</h3>
+                            <span>Businessman</span>
                           </div>
                         </div>
                       </div>
-                    </div>
-                    <div class="swiper-slide">
-                      <div class="list_inner">
-                        <div class="text">
-                          <p>
-                            The first time I got an issue sorted within seconds.
-                            The author responded to my email within minutes. I
-                            am happy to recommend anyone not only this wonderful
-                            theme but also the author.
-                          </p>
-                        </div>
-                        <div class="details">
-                          <div class="image">
-                            <img src="./image/testimonial/2.jpg" alt="Samiul Ajom" />
-                          </div>
-                          <div class="info">
-                            <h3>Jhon Doe</h3>
-                            <span>Content Manager</span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="swiper-slide">
-                      <div class="list_inner">
-                        <div class="text">
-                          <p>
-                            The first time I got an issue sorted within seconds.
-                            The author responded to my email within minutes. I
-                            am happy to recommend anyone not only this wonderful
-                            theme but also the author.
-                          </p>
-                        </div>
-                        <div class="details">
-                          <div class="image">
-                            <img src="./image/testimonial/1.jpg" alt="Samiul Ajom" />
-                          </div>
-                          <div class="info">
-                            <h3>Armin Bhaan vuiran</h3>
-                            <span>Content Manager</span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="swiper-slide">
-                      <div class="list_inner">
-                        <div class="text">
-                          <p>
-                            The first time I got an issue sorted within seconds.
-                            The author responded to my email within minutes. I
-                            am happy to recommend anyone not only this wonderful
-                            theme but also the author.
-                          </p>
-                        </div>
-                        <div class="details">
-                          <div class="image">
-                            <img src="./image/testimonial/3.jpg" alt="Samiul Ajom" />
-                          </div>
-                          <div class="info">
-                            <h3>Abrar Chowdury</h3>
-                            <span>Production Manager</span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="swiper-slide">
-                      <div class="list_inner">
-                        <div class="text">
-                          <p>
-                            The first time I got an issue sorted within seconds.
-                            The author responded to my email within minutes. I
-                            am happy to recommend anyone not only this wonderful
-                            theme but also the author.
-                          </p>
-                        </div>
-                        <div class="details">
-                          <div class="image">
-                            <img src="./image/testimonial/2.jpg" alt="Samiul Ajom" />
-                          </div>
-                          <div class="info">
-                            <h3>Jhon Doe</h3>
-                            <span>Content Manager</span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="swiper-slide">
-                      <div class="list_inner">
-                        <div class="text">
-                          <p>
-                            The first time I got an issue sorted within seconds.
-                            The author responded to my email within minutes. I
-                            am happy to recommend anyone not only this wonderful
-                            theme but also the author.
-                          </p>
-                        </div>
-                        <div class="details">
-                          <div class="image">
-                            <img src="./image/testimonial/1.jpg" alt="Samiul Ajom" />
-                          </div>
-                          <div class="info">
-                            <h3>Armin Bhaan vuiran</h3>
-                            <span>Content Manager</span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
-                    <div class="swiper-slide">
-                      <div class="list_inner">
-                        <div class="text">
-                          <p>
-                            The first time I got an issue sorted within seconds.
-                            The author responded to my email within minutes. I
-                            am happy to recommend anyone not only this wonderful
-                            theme but also the author.
-                          </p>
-                        </div>
-                        <div class="details">
-                          <div class="image">
-                            <img src="./image/testimonial/3.jpg" alt="Samiul Ajom" />
-                          </div>
-                          <div class="info">
-                            <h3>Abrar Chowdury</h3>
-                            <span>Production Manager</span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+                    </div>               
+
                   </div>
                   <div class="swiper-pagination"></div>
                 </div>
@@ -1582,7 +1418,10 @@
                     <span><i class="fa-solid fa-location-dot"></i></span>
                     <div>
                       <h3>Location</h3>
-                      <p>Konabari,Gazipur,Dhaka,Bangladesh</p>
+                      <p>
+                      Konabari, Gazipur<br>
+                      Dhaka, Bangladesh
+                      </p>
                     </div>
                   </li>
                   <li>
