--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <meta property="og:url" content="https://samiulajom.github.io/samiul-showcase/" />
 <meta property="og:type" content="website" />
 <meta property="og:image" content="https://samiulajom.github.io/samiul-showcase/image/preview/portfolio-preview.jpg" />
-<meta property="og:image:alt" content="Portfolio of Md. Samiul Ajom - Web & Shopify Developer" />
+<meta property="og:image:alt" content="Web Developer & Shopify Expert | React & Next.js Expert" />
 <meta property="og:locale" content="en_US" />
 
 <!-- ✅ Twitter Card -->
@@ -29,7 +29,7 @@
 <meta name="twitter:title" content="Md. Samiul Ajom | Web & Shopify Developer | React & Next.js" />
 <meta name="twitter:description" content="Experienced Web & Shopify Developer specializing in React & Next.js. Crafting fast, responsive UI & modern eCommerce stores." />
 <meta name="twitter:image" content="https://samiulajom.github.io/samiul-showcase/image/banner/portfolio-overview.png" />
-<meta name="twitter:image:alt" content="Portfolio of Md. Samiul Ajom - Web & Shopify Developer" />
+<meta name="twitter:image:alt" content="Web Developer & Shopify Expert | React & Next.js Expert" />
 <meta name="twitter:site" content="@samiulajom" />
 <meta name="twitter:creator" content="@samiulajom" />
 
@@ -396,7 +396,7 @@
       <nav class="desktop">
         <div class="nav-logo">
           <div>
-            <img src="./image/nav/pro3.png" alt="Samiul Ajom" />
+            <img src="./image/nav/pro3.png" alt="Web Developer & Shopify Expert | React & Next.js Expert" />
           </div>
           <h2>Md. Samiul Ajom</h2>
           <p>Frontend & Shopify Developer | React.js & Next.js</p>
@@ -708,7 +708,7 @@
           </div>
           <div class="right">
             <div class="image-container">
-              <img src="./image/banner/samiul-4.png" alt="Samiul Ajom" />
+              <img src="./image/banner/samiul-4.png" alt="Web Developer & Shopify Expert | React & Next.js Expert" />
             </div>
           </div>
         </section>
@@ -1111,7 +1111,7 @@
                         </div>
                         <div class="details">
                           <div class="image">
-                            <img src="./image/testimonial/2.jpg" alt="Samiul Ajom" />
+                            <img src="./image/testimonial/2.jpg" alt="Web Developer & Shopify Expert | React & Next.js Expert" />
                           </div>
                           <div class="info">
                             <h3>Bishopwking</h3>
@@ -1129,7 +1129,7 @@
                         </div>
                         <div class="details">
                           <div class="image">
-                            <img src="./image/testimonial/3.jpg" alt="Samiul Ajom" />
+                            <img src="./image/testimonial/3.jpg" alt="Web Developer & Shopify Expert | React & Next.js Expert" />
                           </div>
                           <div class="info">
                             <h3>Andrew Murphy</h3>
@@ -1148,7 +1148,7 @@
                         </div>
                         <div class="details">
                           <div class="image">
-                            <img src="./image/testimonial/1.jpg" alt="Samiul Ajom" />
+                            <img src="./image/testimonial/1.jpg" alt="Web Developer & Shopify Expert | React & Next.js Expert" />
                           </div>
                           <div class="info">
                             <h3>marieclaire</h3>
@@ -1166,7 +1166,7 @@
                         </div>
                         <div class="details">
                           <div class="image">
-                            <img src="./image/testimonial/3.jpg" alt="Samiul Ajom" />
+                            <img src="./image/testimonial/3.jpg" alt="Web Developer & Shopify Expert | React & Next.js Expert" />
                           </div>
                           <div class="info">
                             <h3>Mr Marcus Robin33</h3>
@@ -1318,7 +1318,7 @@
             <ul>
               <li class="big-img corporate personal">
                 <a href="https://react-monnu-foi4.vercel.app/"
-                  target="_blank"   alt="web and shopify developer" ><img src="./image/portfolio/monnu.jpg" alt="monnu" />
+                  target="_blank"   alt="Web Developer & Shopify Expert | React & Next.js Expert" ><img src="./image/portfolio/monnu.jpg" alt="Web Developer & Shopify Expert | React & Next.js Expert" />
                   <div class="info">
                     <span>Design</span>
                     <br />
@@ -1328,9 +1328,9 @@
               </li>
               <li class="small-img personal">
                 <a href="https://samiulajom.github.io/peoject3/"
-                target="_blank"   alt="web and shopify developer"  ><img
+                target="_blank"   alt="Web Developer & Shopify Expert | React & Next.js Expert"  ><img
                     src="./image/portfolio/portfolio-img2.png"
-                    alt="monnu"
+                    alt="Web Developer & Shopify Expert | React & Next.js Expert"
                   />
                   <div class="info">
                     <span>Design</span>
@@ -1341,7 +1341,7 @@
               </li>
               <li class="horizon-img app">
                 <a href="https://samiulajom.github.io/calculator/"
-                  target="_blank"   alt="web and shopify developer" ><img src="./image/portfolio/cal.png" alt="monnu" />
+                  target="_blank"   alt="Web Developer & Shopify Expert | React & Next.js Expert" ><img src="./image/portfolio/cal.png" alt="Web Developer & Shopify Expert | React & Next.js Expert" />
                   <div class="info">
                     <span>Design</span>
                     <br />
@@ -1362,7 +1362,7 @@
               </li>
               <li class="big-img weather app">
                 <a href="https://samiulajom.github.io/Weather_Update/"
-                 target="_blank"   alt="web and shopify developer"  ><img src="./image/portfolio/weather.png" alt="weather" />
+                 target="_blank"   alt="Web Developer & Shopify Expert | React & Next.js Expert"  ><img src="./image/portfolio/weather.png" alt="Web Developer & Shopify Expert | React & Next.js Expert" />
                   <div class="info">
                     <span>Design</span>
                     <br />
@@ -1372,7 +1372,7 @@
               </li>
               <li class="horizon-img app">
                 <a href="https://samiulajom.github.io/Quizapp/"
-                target="_blank"   alt="web and shopify developer"   ><img src="./image/portfolio/quiz.png" alt="quiz" />
+                target="_blank"   alt="Web Developer & Shopify Expert | React & Next.js Expert"   ><img src="./image/portfolio/quiz.png" alt="Web Developer & Shopify Expert | React & Next.js Expert" />
                   <div class="info">
                     <span>Design</span>
                     <br />
@@ -1382,9 +1382,9 @@
               </li>
               <li class="small-img corporate">
                 <a href="https://samiulajom.github.io/Homework2/"
-                 target="_blank"   alt="web and shopify developer"  ><img
+                 target="_blank"   alt="Web Developer & Shopify Expert | React & Next.js Expertr"  ><img
                     src="./image/portfolio/portfolio-img3.png"
-                    alt="monnu"
+                    alt="Web Developer & Shopify Expert | React & Next.js Expert"
                   />
                   <div class="info">
                     <span>Design</span>
